# okuchi

./: Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: basic.rs  comprehensive.rs  encrypt_decrypt.rs  homomorphic.rs
src/: ciphertext.rs  decrypt.rs  encrypt.rs  error.rs  key.rs  keypair.rs  lib.rs  okuchi.rs  stream.rs  util.rs
src/crypto/: decrypt.rs  encrypt.rs  mod.rs  util.rs
src/keypair/: mod.rs  util.rs
src/util/: rand.rs
