[package]
name = "okuchi"
version = "0.1.0"
edition = "2024"
authors = ["Nelson Dominguez <ekkolon@proton.me>"]
description = "Okamoto-Uchiyama Cryptosystem Implementation"
license = "MIT OR Apache-2.0"
readme = "README.md"


[dependencies]
num-bigint-dig = { version = "0.8", features = ["zeroize", "prime", "rand", "u64_digit"] }
num-traits = "0.2"
rand = "0.8"
zeroize = { version = "1.6", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "okuchi"
harness = false


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
