[package]
name = "okuchi"
version = "0.1.0"
edition = "2024"
authors = ["Nelson Dominguez <ekkolon@proton.me>"]
description = "Okamoto-Uchiyama Cryptosystem Implementation"
license = "MIT OR Apache-2.0"
readme = "README.md"


[dependencies]
num-bigint-dig = { version = "0.9", features = ["zeroize", "prime", "rand"] }
num-traits = "0.2"
num-integer = "0.1"
rand = "0.9"
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "2.0"
rayon = { version = "1.11", optional = true }

[dev-dependencies]
criterion = "0.8"
okuchi = { path = ".", features = ["expose-secret", "allow-weak-keys"] }

[features]
default = ["rayon"]
rayon = ["dep:rayon"]
expose-secret = []
allow-weak-keys = []


[[bench]]
name = "okuchi"
harness = false


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
