[package]
name = "okuchi-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
num-bigint-dig = { version = "0.9.1", features = ["rand"] }
num-traits = "0.2"

[dependencies.okuchi]
path = ".."
features = ["allow-weak-keys"]

[lints.rust]
warnings = "allow"

[[bin]]
name = "basic"
path = "fuzz_targets/basic.rs"
test = false
doc = false

[[bin]]
name = "comprehensive"
path = "fuzz_targets/comprehensive.rs"
test = false
doc = false
